chore : update site with 0.13.1 data

--- a/index.html
+++ b/index.html
@@ -265,14 +265,15 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    0.13.0 Released - Try Now!
+                    0.13.1 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    Data Insights & KPIs, Lineage Traceability, Data Lake
-                    Profiler, Search Improvements, and lots more.
-                    <strong>OpenMetadata 0.13.0 Release</strong>
+                    Freshness Metric & Data Quality Tests, Notification Support,
+                    dbt has its own workflow, Topic Schemas support field
+                    descriptions and tags, and lots more.
+                    <strong>OpenMetadata 0.13.1 Release</strong>
                     <!-- . Watch the
                     <a
                       href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
@@ -281,7 +282,7 @@
                     >
                     or -->
                     <a
-                      href="https://blog.open-metadata.org/openmetadata-0-13-0-release-ac8ac5bd87c1"
+                      href="https://github.com/open-metadata/OpenMetadata/releases/tag/0.13.1-release"
                       target="_blank"
                       >Read more here</a
                     >.
