--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
                 <div class="col-lg-6">
                   <div>
                     Freshness Metric & Data Quality Tests, Notification Support,
-                    dbt has its own workflow, Topic Schemas support field
-                    descriptions and tags, and lots more.
+                    dbt workflow, Topic Schemas with field descriptions and
+                    tags, and lots more.
                     <strong>OpenMetadata 0.13.1 Release</strong>
                     <!-- . Watch the
                     <a
