--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    0.13.2 Released with Improved SQL Lineage, Glossary Bulk Upload, Unified Tag Category API, Mutually Exclusive Tags, Chrome Extension (Beta) and a lot more.
+                    0.13.2 Released with Improved SQL Lineage, Glossary Bulk
+                    Upload, Unified Tag Category API, Mutually Exclusive Tags,
+                    Chrome Extension (Beta) and a lot more.
                     <strong>OpenMetadata 0.13.2 Release</strong>
                     <!-- . Watch the
                     <a
@@ -1655,6 +1657,52 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/release-0.13.2.webp"
+                      alt="release-0.13.2"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 0.13.2 Release
+                      </h4>
+                      <p class="card-text">
+                        Improved SQL Lineage, Glossary Bulk Upload, Unified Tag
+                        Category API, Mutually Exclusive Tags, Chrome Extension,
+                        and lots more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-13-0-release-ac8ac5bd87c1"
                     target="_blank"
                   >
@@ -1697,53 +1745,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-12-0-release-1ac059700de4"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/Release-0.12.jpg"
-                      alt="release-0.12"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.12.0 Release
-                      </h4>
-                      <p class="card-text">
-                        Roles & Policies, Teams Hierarchy, All new Data Quality
-                        & Profiler, Announcements, Slack & MS Teams Webhooks,
-                        Secrets Manager Interface, Custom Attributes, Global
-                        Settings, and more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
+
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
@@ -1917,7 +1919,12 @@
             </div>
             <hr class="my-5" />
             <div class="row gx-5 align-items-center">
-              <div class="col-md-6 small">Copyright &copy; OpenMetadata <script>document.write(new Date().getFullYear());</script></div>
+              <div class="col-md-6 small">
+                Copyright &copy; OpenMetadata
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+              </div>
               <!-- <div class="col-md-6 text-md-end small">
                             <a href="#!">Privacy Policy</a>
                             ·
