update community page

--- a/community.html
+++ b/community.html
@@ -223,7 +223,11 @@
                 <div class="col-lg-6">
                   <h2 class="section-header fw-600 mb-4">Monthly Meetups</h2>
                   <p class="lead">
-                    Join us on the <strong>last Thursday of the month</strong>  over Zoom to learn about OpenMetadata’s progress. Catch up with some exciting news on the upcoming features. Watch live demos, ask questions, and share your feedback.
+                    Join us on the
+                    <strong>last Thursday of the month</strong> over Zoom to
+                    learn about OpenMetadata’s progress. Catch up with some
+                    exciting news on the upcoming features. Watch live demos,
+                    ask questions, and share your feedback.
                   </p>
                   <p class="lead mb-4">
                     Stay tuned for the latest in Metadata management!
@@ -276,16 +280,16 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/jEbN1tt89H0"
+                        src="https://www.youtube.com/embed/fDUj30Ub9VE"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Data Lineage Webinar : Automatically extract the lineage
-                        from your data warehouses such as Snowflake, dashboard
-                        service like MetaBase.
+                        Mini-Webinar on Custom Connectors: We will showcase a
+                        demo on how you can build your own custom connectors in
+                        OpenMetadata.
                       </p>
                     </div>
                   </div>
@@ -296,15 +300,17 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/gLdTOF81YpI"
+                        src="https://www.youtube.com/embed/Epd9G6igLUM"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Build Trust in your Data with OpenMetadata: Intro to
-                        Data Quality and Profiler.
+                        How to Improve Data Culture using OpenMetadata: Enhance
+                        your data platform governance, Drive and monitor
+                        OpenMetadata platform usage, Engage your users with Data
+                        Insight KPIs.
                       </p>
                     </div>
                   </div>
@@ -319,7 +325,10 @@
                 <div class="col-lg-8">
                   <div class="text-center mt-5">
                     <p class="lead">
-                      Watch out for an end-to-end coverage on everything you need to know about Data Lineage, Data Quality & Profiler, Setting up Integrations for Metadata Ingestion, Data Discovery, and a lot more.
+                      Watch out for an end-to-end coverage on everything you
+                      need to know about Data Lineage, Data Quality & Profiler,
+                      Setting up Integrations for Metadata Ingestion, Data
+                      Discovery, and a lot more.
                     </p>
                   </div>
                 </div>
@@ -365,13 +374,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/8gbj9c_wb9Y"
+                            src="https://www.youtube.com/embed/HYt7EopZrJc"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">October 27th, 2022</p>
+                          <p class="fw-600 mb-0 mt-2">January 19th, 2023</p>
                         </div>
                       </div>
                     </div>
@@ -381,14 +390,14 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/tv3pyCLcJfQ"
+                            src="https://www.youtube.com/embed/oNbMnTW5AkE"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
                           <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.12.0 Release
+                            OpenMetadata 0.13.0 Release
                           </p>
                         </div>
                       </div>
