update read more link

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     >
                     or -->
                     <a
-                      href="https://github.com/open-metadata/OpenMetadata/releases/tag/0.13.2-release"
+                      href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
                       target="_blank"
                       >Read more here</a
                     >.
