--- a/index.html
+++ b/index.html
@@ -265,15 +265,16 @@
               <div class="row gx-5 justify-content-center text-center">
                 <div class="col-lg-6">
                   <div class="display-6 text-primary fw-500">
-                    0.13.2 Released - Try Now!
+                    1.0.0 Released - Try Now!
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    0.13.2 Released with Improved SQL Lineage, Glossary Bulk
-                    Upload, Unified Tag Category API, Mutually Exclusive Tags,
-                    Chrome Extension (Beta) and a lot more.
-                    <strong>OpenMetadata 0.13.2 Release</strong>
+                    1.0.0 Released with improved APIs and schema, new features
+                    for data ingestion, dashboard data models, search, and
+                    security, as well as enhancements to glossary and lineage
+                    UI, and more.
+                    <!-- <strong>OpenMetadata 0.13.2 Release</strong> -->
                     <!-- . Watch the
                     <a
                       href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
@@ -281,11 +282,11 @@
                       >demo</a
                     >
                     or -->
-                    <a
+                    <!-- <a
                       href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
                       target="_blank"
                       >Read more here</a
-                    >.
+                    >. -->
                   </div>
                 </div>
               </div>
