--- a/index.html
+++ b/index.html
@@ -270,10 +270,11 @@
                 </div>
                 <div class="col-lg-6">
                   <div>
-                    1.0.0 Released with improved APIs and schema, new features
-                    for data ingestion, dashboard data models, search, and
-                    security, as well as enhancements to glossary and lineage
-                    UI, and more.
+                    <strong>OpenMetadata 1.0.0 Released</strong> with stabilized
+                    schemas and APIs, and an improved UI/UX. Explore the awesome
+                    new features for data ingestion, dashboard data models, auto
+                    PII classification, localization support, global search,
+                    lineage, security, and much more.
                     <!-- <strong>OpenMetadata 0.13.2 Release</strong> -->
                     <!-- . Watch the
                     <a
