remove security from text

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     schemas and APIs, and an improved UI/UX. Explore the awesome
                     new features for data ingestion, dashboard data models, auto
                     PII classification, localization support, global search,
-                    lineage, security, and much more.
+                    lineage, and much more.
                     <!-- <strong>OpenMetadata 0.13.2 Release</strong> -->
                     <!-- . Watch the
                     <a
