Fix Canonical link

--- a/community.html
+++ b/community.html
@@ -188,7 +188,7 @@
                     <div class="d-flex flex-column flex-sm-row">
                       <a
                         class="btn btn-lg btn-outline-primary btn-home-slack fw-500"
-                        href="http://slack.open-metadata.org/"
+                        href="https://slack.open-metadata.org/"
                         target="_blank"
                       >
                         <img
@@ -483,7 +483,7 @@
                 </div>
                 <ul class="list-unstyled mb-0">
                   <li class="mb-2">
-                    <a href="http://slack.open-metadata.org/" target="_blank"
+                    <a href="https://slack.open-metadata.org/" target="_blank"
                       ><i class="fab fa-slack"></i> Slack</a
                     >
                   </li>
