add release 1.0.0 change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="canonical" href="https://open-metadata.org/"/>
+    <link rel="canonical" href="https://open-metadata.org/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
@@ -276,7 +276,7 @@
                     new features for data ingestion, dashboard data models, auto
                     PII classification, localization support, global search,
                     lineage, and much more.
-                    <!-- <strong>OpenMetadata 0.13.2 Release</strong> -->
+                    <strong>OpenMetadata 1.0.0 Release</strong>
                     <!-- . Watch the
                     <a
                       href="https://www.youtube.com/watch?v=tv3pyCLcJfQ"
@@ -284,11 +284,11 @@
                       >demo</a
                     >
                     or -->
-                    <!-- <a
-                      href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
+                    <a
+                      href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
                       target="_blank"
                       >Read more here</a
-                    >. -->
+                    >.
                   </div>
                 </div>
               </div>
@@ -1660,6 +1660,97 @@
                 <div class="col-lg-4 mb-5">
                   <a
                     class="card lift h-100"
+                    href="https://blog.open-metadata.org/openmetadata-1-0-release-beb34762d916"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/v1.0.0.jpg"
+                      alt="release-1.0.0"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        OpenMetadata 1.0.0 Release
+                      </h4>
+                      <p class="card-text">
+                        Improved Schemas & APIs, Ingestion Improvements, Storage
+                        Services, Dashboard Data Models, Auto PII
+                        Classification, Localization and much more.
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
+                    href="https://blog.open-metadata.org/how-we-built-the-ingestion-framework-1af0b6ff5c81"
+                    target="_blank"
+                  >
+                    <img
+                      class="card-img-top"
+                      src="./images/how-we-built-ingestion.png"
+                      alt="how-we-built-ingestion-framework"
+                      loading="lazy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title mb-2">
+                        How we Built the Ingestion Framework
+                      </h4>
+                      <p class="card-text">
+                        Extracting Metadata from Every Corner: The evolution of
+                        the Ingestion Framework at OpenMetadata
+                      </p>
+                    </div>
+                    <div
+                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
+                    >
+                      <div class="small text-primary">Read more</div>
+                      <div class="small text-primary">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          fill="none"
+                          stroke="currentColor"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          class="feather feather-arrow-right"
+                        >
+                          <line x1="5" y1="12" x2="19" y2="12"></line>
+                          <polyline points="12 5 19 12 12 19"></polyline>
+                        </svg>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col-lg-4 mb-5">
+                  <a
+                    class="card lift h-100"
                     href="https://blog.open-metadata.org/openmetadata-0-13-2-release-e32c0de93361"
                     target="_blank"
                   >
@@ -1677,100 +1768,6 @@
                         Improved SQL Lineage, Glossary Bulk Upload, Unified Tag
                         Category API, Mutually Exclusive Tags, Chrome Extension,
                         and lots more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/openmetadata-0-13-0-release-ac8ac5bd87c1"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/release013-blog-cover.jpg"
-                      alt="release-0.12"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        OpenMetadata 0.13.0 Release
-                      </h4>
-                      <p class="card-text">
-                        Data Insights & KPIs, Lineage Traceability, Data Lake
-                        Profiler, Search Improvements, and lots more.
-                      </p>
-                    </div>
-                    <div
-                      class="card-footer bg-transparent border-top d-flex align-items-center justify-content-between"
-                    >
-                      <div class="small text-primary">Read more</div>
-                      <div class="small text-primary">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          class="feather feather-arrow-right"
-                        >
-                          <line x1="5" y1="12" x2="19" y2="12"></line>
-                          <polyline points="12 5 19 12 12 19"></polyline>
-                        </svg>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <div class="col-lg-4 mb-5">
-                  <a
-                    class="card lift h-100"
-                    href="https://blog.open-metadata.org/tasks-workflow-in-openmetadata-2904ae1ec5b2"
-                    target="_blank"
-                  >
-                    <img
-                      class="card-img-top"
-                      src="./images/collaboration.gif"
-                      alt="data-collaboration"
-                      loading="lazy"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title mb-2">
-                        Tasks Workflow in OpenMetadata: Taking data
-                        collaboration to the next level
-                      </h4>
-                      <p class="card-text">
-                        Collaboration is a missing aspect in the current
-                        landscape of Data that impedes the data teams in an
-                        organization to understand and work together with data
-                        better.
                       </p>
                     </div>
                     <div
