--- a/community.html
+++ b/community.html
@@ -280,15 +280,15 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/fDUj30Ub9VE"
+                        src="https://www.youtube.com/embed/LvDMgElrILE"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Mini-Webinar on Custom Connectors: We will showcase a
-                        demo on how you can build your own custom connectors in
+                        OpenMetadata Webinar on Roles and Policies: learn how to
+                        manage users, roles, and policies for access control in
                         OpenMetadata.
                       </p>
                     </div>
@@ -300,17 +300,16 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/Epd9G6igLUM"
+                        src="https://www.youtube.com/embed/fDUj30Ub9VE"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        How to Improve Data Culture using OpenMetadata: Enhance
-                        your data platform governance, Drive and monitor
-                        OpenMetadata platform usage, Engage your users with Data
-                        Insight KPIs.
+                        Mini-Webinar on Custom Connectors: We will showcase a
+                        demo on how you can build your own custom connectors in
+                        OpenMetadata.
                       </p>
                     </div>
                   </div>
@@ -374,13 +373,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/HYt7EopZrJc"
+                            src="https://www.youtube.com/embed/Qif-8SQ1KSE"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">January 19th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">March 16th, 2023</p>
                         </div>
                       </div>
                     </div>
@@ -390,15 +389,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/oNbMnTW5AkE"
+                            src="https://www.youtube.com/embed/HYt7EopZrJc"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">
-                            OpenMetadata 0.13.0 Release
-                          </p>
+                          <p class="fw-600 mb-0 mt-2">January 19th, 2023</p>
                         </div>
                       </div>
                     </div>
