update community page content

--- a/community.html
+++ b/community.html
@@ -223,11 +223,12 @@
                 <div class="col-lg-6">
                   <h2 class="section-header fw-600 mb-4">Monthly Meetups</h2>
                   <p class="lead">
-                    Join us on the
-                    <strong>last Thursday of the month</strong> over Zoom to
-                    learn about OpenMetadata’s progress. Catch up with some
-                    exciting news on the upcoming features. Watch live demos,
-                    ask questions, and share your feedback.
+                    Join us
+                    <strong>every month</strong> over Zoom to learn about
+                    OpenMetadata’s progress. Catch up with some exciting news on
+                    the upcoming features. Benefit from the informative
+                    webinars, watch live demos, ask questions, and share your
+                    feedback.
                   </p>
                   <p class="lead mb-4">
                     Stay tuned for the latest in Metadata management!
@@ -280,16 +281,16 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/LvDMgElrILE"
+                        src="https://www.youtube.com/embed/pzX89GP_nRw"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        OpenMetadata Webinar on Roles and Policies: learn how to
-                        manage users, roles, and policies for access control in
-                        OpenMetadata.
+                        OpenMetadata Webinar on Storage Services: Learn how the
+                        Datalake connector works, our goal with the new Storage
+                        Services, as well as its design and implementation.
                       </p>
                     </div>
                   </div>
@@ -300,15 +301,15 @@
                       <iframe
                         width="100%"
                         height="260"
-                        src="https://www.youtube.com/embed/fDUj30Ub9VE"
+                        src="https://www.youtube.com/embed/LvDMgElrILE"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                       ></iframe>
                       <p class="fw-600 mb-0 mt-2">
-                        Mini-Webinar on Custom Connectors: We will showcase a
-                        demo on how you can build your own custom connectors in
+                        OpenMetadata Webinar on Roles and Policies: learn how to
+                        manage users, roles, and policies for access control in
                         OpenMetadata.
                       </p>
                     </div>
@@ -326,8 +327,9 @@
                     <p class="lead">
                       Watch out for an end-to-end coverage on everything you
                       need to know about Data Lineage, Data Quality & Profiler,
-                      Setting up Integrations for Metadata Ingestion, Data
-                      Discovery, and a lot more.
+                      Roles & Policies, Custom Connectors, Data Culture, Storage
+                      Services, Setting up Integrations for Metadata Ingestion,
+                      Data Discovery, and a lot more.
                     </p>
                   </div>
                 </div>
