update community page with new webinars

--- a/community.html
+++ b/community.html
@@ -281,6 +281,27 @@
                       <iframe
                         width="100%"
                         height="260"
+                        src="https://www.youtube.com/embed/LII_5CDo_0s"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                      <p class="fw-600 mb-0 mt-2">
+                        OpenMetadata Webinar on Glossaries and Classifications:
+                        Learn how these features work, how to organize them, and
+                        the best practices on using them to label the data to
+                        support various use cases.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="card-body">
+                      <iframe
+                        width="100%"
+                        height="260"
                         src="https://www.youtube.com/embed/pzX89GP_nRw"
                         title="YouTube video player"
                         frameborder="0"
@@ -295,32 +316,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">
-                  <div class="card">
-                    <div class="card-body">
-                      <iframe
-                        width="100%"
-                        height="260"
-                        src="https://www.youtube.com/embed/LvDMgElrILE"
-                        title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                      ></iframe>
-                      <p class="fw-600 mb-0 mt-2">
-                        OpenMetadata Webinar on Roles and Policies: learn how to
-                        manage users, roles, and policies for access control in
-                        OpenMetadata.
-                      </p>
-                    </div>
-                  </div>
-                </div>
               </div>
-              <!-- <div class="row gx-5 justify-content-center">
-              <div class="col-lg-8" data-aos="fade-up">
-                <img src="images/webinar.png" class="img-fluid" />
-              </div>
-            </div> -->
               <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8">
                   <div class="text-center mt-5">
@@ -375,13 +371,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/Qif-8SQ1KSE"
+                            src="https://www.youtube.com/embed/WVURVh6HHkM"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">March 16th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">May 18th, 2023</p>
                         </div>
                       </div>
                     </div>
@@ -391,13 +387,13 @@
                           <iframe
                             width="100%"
                             height="260"
-                            src="https://www.youtube.com/embed/HYt7EopZrJc"
+                            src="https://www.youtube.com/embed/Qif-8SQ1KSE"
                             title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen
                           ></iframe>
-                          <p class="fw-600 mb-0 mt-2">January 19th, 2023</p>
+                          <p class="fw-600 mb-0 mt-2">March 16th, 2023</p>
                         </div>
                       </div>
                     </div>
