--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,23 @@
                     <h5>IBM Db2</h5>
                   </a>
                 </div>
+                <div
+                  class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
+                  data-aos="fade-up"
+                >
+                  <a
+                    href="https://docs.open-metadata.org/connectors/database/impala"
+                    target="_blank"
+                  >
+                    <img
+                      src="images/services/service-icon-impala.png"
+                      class="media-img mb-2"
+                      alt="service-impala"
+                      loading="lazy"
+                    />
+                    <h5>Impala</h5>
+                  </a>
+                </div>
 
                 <div
                   class="col-lg-2 col-md-3 col-sm-4 mb-4 text-center"
